--- a/Tax-aloke/HTML/contact-us.html
+++ b/Tax-aloke/HTML/contact-us.html
@@ -98,7 +98,7 @@
     
      
      <!--  <h3> Contact Form </h3> -->
-      <form name="contact-from-div" method="post">
+      <form name="contact-from-div">
          <div class="form-group">
           <label>First Name</label>
           <input type="text" name="first_name" placeholder="First Name">
