--- a/Tax-aloke/HTML/partners.html
+++ b/Tax-aloke/HTML/partners.html
@@ -70,67 +70,112 @@
   </div>
   <div class="banner-content">
     <div class="container">
-      <h3>PARTners</h3>
+      <h3>OUR Partners</h3>
     </div>
   </div>
 </section>
-<section id="about-section" class="about-section-box partner_page">
+<section id="partners-content" class="partners-contenet-box">
   <div class="container clearfix">
-    <div class="about-section-left partner_heading">
-      <h3> WE GIve TAX PROFESSIONAL & EROs <span>Peace of Mind</span></h3>
-      <ul>
-        <li>Offer your clients a valuable service that will make your job easier</li>
-        <li>Minimize your off-season stress by letting us handle your clients' audit needs.</li>
-        <li>Tax returns covered for up to 3 years.</li>
-        <li>A dedicated CPA Agent assigned to each case.</li>
-        <li>Penalties, Interest and Taxes covered for up to $2,500.* (subject to limitations).</li>
-        <li>Product fee conveniently deducted from the taxpayer's refund.</li>
-        <li>100% Money Back Guarantee to any client not fully satisfied with our Audit Support Service.</li>
-      </ul>
-    </div>
+   <p> <span>A</span>udit Assurance Partners with both EROs and Tax Professional to relief them of any headache of
+dealing with there clients IRS audit, and tax burdens during the off season. Tax audits can be
+complex and may require a significant about of time routine communication with the IRS.
+Audit Assurance relieves tax professionals from the arduous and time consuming task
+of analyzing IRS correspondence and then re-analyzing clients’ records and documents.
+All cases are handled in a prompt, courteous and professional manner. </p>
   </div>
-  <div class="about-section-right peace_mind"> <img src="images/zen_stone.png"> </div>
+</section>
+<section id="advantages" class="advantages-box">
+  <div class="container clearfix">
+   <div class="advantages-box-col clearfix">
+    <div class="advantages-box-img">
+     <img src="images/advantages-icon-1.png" />
+    </div>
+    <div class="advantages-box-cont">
+      <h3> Unique Coverage </h3>
+      <p> Audit Assurance reaches out and goes the extra mile in ways other audit assistance
+  plans do not. When credits, such as EIC, Child Tax Credit and Education Credit are
+  denied, Audit assurance will assist clients even if the return is yet unfunded by the IRS.
+  In addition, the Protection Plus Audit Assistance plan includes Schedule A, Schedule C
+  and Schedule E for example, at no additional charge. </p>
+     </div>
+   </div>
+
+   <div class="advantages-box-col clearfix">
+    <div class="advantages-box-img">
+     <img src="images/advantages-icon-2.png" />
+    </div>
+    <div class="advantages-box-cont">
+      <h3> Tax Preparation Guarantee </h3>
+      <p> The taxpayer can rest easy knowing participating tax preparers’ services are
+guaranteed. If a legitimate preparer error is made during the filing of a tax return, the
+taxpayer will be reimbursed for the consequent amounts due to the IRS up to the first
+$2500*. </p>
+     </div>
+   </div>
+
+   <div class="advantages-box-col clearfix">
+    <div class="advantages-box-img">
+     <img src="images/advantages-icon-3.png" />
+    </div>
+    <div class="advantages-box-cont">
+      <h3> Tax Debt Relief </h3>
+      <p> Audit Assurance now offers help to taxpayers who owe debts to the IRS. When
+additional taxes, penalties, and interest are assessed, working with the IRS can be a
+confusing and stressful experience. Our staff will work with the taxpayer for a resolution
+to their debt. Tax Debt </p>
+     </div>
+   </div>
+
+  </div>
 </section>
 <section id="protection" class="protection-div inner_protection">
   <div class="container">
     <div class="protection-left">
-      <h2>Tax Professional We've got You Covered</h2>
+      <h2>Why Partner With US?</h2>
       <!--<img src="images/pro2-img.png">--> </div>
     <div class="protection-right">
-      <h2 class="top_text">Tax Professional We've got You Covered</h2>
-      <p>Audit Assurance will work aggressively with clients to resolve their adverse issues with
-        the IRS, helping them receive the refund they are due. After just one phone call to the
-        Protection Plus Claims Division, the client will know that they truly have a team of
-        dedicated, bilingual professionals ready to assist them. Protection Plus is on THEIR side.</p>
-      <p class="para_change">Audit Assurance relieves tax professionals from the arduous and time consuming task
-        of analyzing IRS correspondence and then re-analyzing clients’ records and documents.
-        All cases are handled in a prompt, courteous and professional manner.</p>
-      <h2>Unique Coverage</h2>
-      <p>Audit Assurance reaches out in ways other audit assistance plans do not. When credits,
-        such as EIC, Child Tax Credit and Education Credit are denied, Protection Plus will
-        assist clients even if the return is yet unfunded by the IRS. In addition, the Protection
-        Plus Audit Assistance plan includes Schedule A, Schedule C and Schedule E for
-        example, at no additional charge.</p>
-      <h2>Tax Preparation Guarantee</h2>
-      <p>The taxpayer can rest easy knowing participating tax preparers’ services are
-        guaranteed. If a legitimate preparer error is made during the filing of a tax return, the
-        taxpayer will be reimbursed for the consequent amounts due to the IRS up to the first
-        $2500*.</p>
-      <h2>Tax Debt Relief</h2>
-      <p>Audit Assurance offers help to taxpayers who owe debts to the IRS. When additional
-        taxes, penalties, and interest are assessed, working with the IRS can be a confusing
-        and stressful experience. Our staff will work with the taxpayer for a resolution to their
-        debt. Tax Debt Relief includes, but is not limited to:</p>     
+      <h2 class="top_text">Advantages to the Tax Professional</h2>
+       <div class="protection-right-box">
         <ul class="relief">
-        <li><i class="fa fa-circle" aria-hidden="true"></i> Guaranteed Installment Agreements</li>
-        <li><i class="fa fa-circle" aria-hidden="true"></i> Wage Garnishment Relief</li>
-        <li><i class="fa fa-circle" aria-hidden="true"></i> Offer in Compromise</li>
-        <li> <i class="fa fa-circle" aria-hidden="true"></i> Tax Penalty Abatement</li>
-        <li> <i class="fa fa-circle" aria-hidden="true"></i> Streamline Installment Agreements</li>
-        <li><i class="fa fa-circle" aria-hidden="true"></i> Tax Liens</li>
-        <li> <i class="fa fa-circle" aria-hidden="true"></i> Innocent Spouse Relief</li>
-        <li><i class="fa fa-circle" aria-hidden="true"></i> Rejected ITIN (W-7) Applications</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Make extra profit on your current customer base by offering low cost audit
+protections</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Audit Assurance will deal with the client and the IRS</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Provides payment of interest and penalties if your office makes a mistake on
+your client's tax return (Subject to terms of the contract)</li>
+          <li> <i class="fa fa-circle" aria-hidden="true"></i> Audit Assurance provides marketing materials for you to give to your client</li>
+          <li> <i class="fa fa-circle" aria-hidden="true"></i> Audit Assurance has a professional staff to handle issues at all levelss</li>
         </ul>
+       </div>
+      <h2>Add Value to Your Return</h2>
+       <div class="protection-right-box">
+         <ul class="relief">
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Audit Assurance is a professional company ready to assist your clients in the
+event of an IRS audit, relieving ERO's of this burden</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Assists the taxpayer, even if the return is unfunded</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Provides client protection for three years</li>
+          <li> <i class="fa fa-circle" aria-hidden="true"></i> Reimbursement up to $2,500 for legitimate preparer errors*</li>
+          <li> <i class="fa fa-circle" aria-hidden="true"></i> Audit Assurance offers year-round bi-lingual support</li>
+        </ul>
+       </div>
+      <h2>Increase Revenue</h2>
+       <div class="protection-right-box">
+         <ul class="relief">
+          <li><i class="fa fa-circle" aria-hidden="true"></i>Replace lost revenue</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Offices can add a fee to the cost of Audit Assurance</li>
+        </ul>
+       </div>
+      <h2>Coverage</h2>
+      <p>Covers denied credits even if the return has not been funded:</p>     
+        <div class="protection-right-box">
+         <ul class="relief">
+          <li><i class="fa fa-circle" aria-hidden="true"></i>EITCe</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Child Tax Credit</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> Additional Child Tax Credit</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> American Opportunity Credit</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> First Time Homebuyers Credit</li>
+          <li><i class="fa fa-circle" aria-hidden="true"></i> W-7 rejects</li>
+        </ul>
+       </div>
     </div>
   </div>
 </section>
