--- a/mystar/index.html
+++ b/mystar/index.html
@@ -32,7 +32,7 @@
     </script>
     
 </head>
-<body>
+<body class="top">
 <div class="side-scroll">
         <div id="nav-anchor"></div>
     	<ul>
