--- a/mystar/index.html
+++ b/mystar/index.html
@@ -43,7 +43,7 @@
     		<li><a href="#tech_details"></a></li>
         	</ul>
     </div>
-
+<div class="new_class"></div>
 <section id="banner">
     <header id="header">
          <div class="container clearfix">
