--- a/Uniterrene2017/index.html
+++ b/Uniterrene2017/index.html
@@ -806,7 +806,8 @@
         </div>
     </footer><!-- footer -->
 </body>
-<script type="text/javascript" src="js/jquery-1.11.0.js"></script>
+<!-- <script type="text/javascript" src="js/jquery-1.11.0.js"></script> -->
+<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.flexslider-min.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
    
