commitimg after modification and Testimonial page added

--- a/ascend/fabric.html
+++ b/ascend/fabric.html
@@ -24,8 +24,15 @@
 		
 	</div>
 </div>
+
+<div class="mobile-get-started-div">
+ <a class="btn mobile-btn-get-started" href="javascript:void(0)">
+  <img src="images/get-started-img.png">
+ </a>
+</div>
+
 <!-- Header start -->
-	<header id="main_header" class="steky-header  ">
+	<header id="main_header" class="steky-header">
 		<div class="headerWrap clearfix">
 		    <div class="container clearfix">
 		        <div class="logo_div">
@@ -172,8 +179,11 @@
 </section>
 <!-- chamois slider ends -->
 <!-- Main content area -->
-<div class="container contents">
-	
+<div class="container contents clearfix">
+	 
+	<div class="mobile-heding-div">
+		<h2>Moisture Wicking </h2>
+	</div> 
 	<!-- main sidebar -->
 	<aside class="mainSidebar">
 		<div class="asideContainer">	
@@ -313,6 +323,14 @@
 						<!-- product info -->
 					</div>
 				<!-- product content end -->
+				<!-- product more description -->
+					<div class="readMoreContent">
+					<div class="productHeading">
+						<span>Description : </span>
+					</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+					</div>
 					<div class="btnHolder">
 										<a class="btn btn_readMore" href="javascript:void">Read More <i class="fa fa-angle-double-down" aria-hidden="true"></i>
 						</a>
@@ -391,6 +409,14 @@
 						<!-- product info -->
 					</div>
 				<!-- product content end -->
+				<!-- product more description -->
+					<div class="readMoreContent">
+					<div class="productHeading">
+						<span>Description : </span>
+					</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+					</div>
 					<div class="btnHolder">
 										<a class="btn btn_readMore" href="javascript:void">Read More <i class="fa fa-angle-double-down" aria-hidden="true"></i>
 						</a>
