--- a/ascend/technology_chamois.html
+++ b/ascend/technology_chamois.html
@@ -24,6 +24,13 @@
 		
 	</div>
 </div>
+
+<div class="mobile-get-started-div">
+ <a class="btn mobile-btn-get-started" href="javascript:void(0)">
+  <img src="images/get-started-img.png">
+ </a>
+</div>
+
 <!-- Header start -->
 	<header id="main_header" class="steky-header  ">
 		<div class="headerWrap clearfix">
@@ -174,6 +181,9 @@
 <!-- Main content area -->
 <div class="container contents">
 	
+	<div class="mobile-heding-div">
+		<h2>Cycling</h2>
+	</div>
 	<!-- main sidebar -->
 	<aside class="mainSidebar">
 		<div class="asideContainer">	
@@ -308,6 +318,14 @@
 						</div>
 						<!-- product info -->
 					</div>
+					<!-- product more description -->
+					<div class="readMoreContent">
+					<div class="productHeading">
+						<span>Description : </span>
+					</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+					</div>
 				<!-- product content end -->
 					<div class="btnHolder">
 										<a class="btn btn_readMore" href="javascript:void">Read More <i class="fa fa-angle-double-down" aria-hidden="true"></i>
@@ -386,6 +404,14 @@
 						<!-- product info -->
 					</div>
 				<!-- product content end -->
+				<!-- product more description -->
+					<div class="readMoreContent">
+					<div class="productHeading">
+						<span>Description : </span>
+					</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore consectetur, animi sit cupiditate eius, amet officiis at fuga, labore soluta doloribus, ratione autem minima. Blanditiis vel eius est enim quam?</p>
+					</div>
 					<div class="btnHolder">
 										<a class="btn btn_readMore" href="javascript:void">Read More <i class="fa fa-angle-double-down" aria-hidden="true"></i>
 						</a>
