new font family add from google font. that is lato and fjalla

--- a/ascend/index.html
+++ b/ascend/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/responsive.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet"> 
 </head>
 <body>
 <div class="fullSecreenSearch">
