footer section modified

--- a/ascend/index.html
+++ b/ascend/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/responsive.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 </head>
 <body>
 <div class="fullSecreenSearch">
@@ -145,7 +145,7 @@
       <h5>Quality Custom Sportswear made Easy</h5>
       <div class="footer_border clearfix">
         <div class="container clearfix">
-          <div class="footer_left_row">
+          <div class="footer_left_row clearfix">
             <div class="footer_row">
               <h3>About US</h3>
               <ul>
@@ -159,6 +159,10 @@
                 <li class="email"><img src="images/footer_email.png"/><a href="#">Email Us</a></li>
                 <li class="tel"><img src="images/footer_call.png"/><a href="tel:1-800-894-7105">1-800-894-7105</a></li>
                 <li><span>Business Hours :</span> M-F 9AM - 6PM EST</li>
+              </ul>
+            </div>
+            <div class="footer_row business_hour">
+              <ul>
                 <li class="footer_owned"><a href="#"><img src="images/footer_usa.png"/></a></li>
               </ul>
             </div>
