local jquery library link added

--- a/ascend/index.html
+++ b/ascend/index.html
@@ -269,7 +269,8 @@
   </div>
 </footer>
 <!-- Footer End --> 
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> 
+<!--<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
+<script src='js/jquery.min.js'></script> 
 <script src="js/custom.js"></script>
 </body>
 </html>
