heading section changes

--- a/ascend/testimonials.html
+++ b/ascend/testimonials.html
@@ -146,7 +146,7 @@
 <!-- Main content area -->
 <div class="container contents">
   <div class="HeadingTestimonials">
-    <h2>What Our Client Says</h2>
+    <h2 class="partical_bothside"><span></span>What Our Client Says</h2>
   </div>
   <!-- main content start -->
   <div class="mainContentStart">
