--- a/ascend/fabric.html
+++ b/ascend/fabric.html
@@ -178,13 +178,20 @@
 		<h2>FABRICS</h2>
 	</div>
 </section>
+
 <!-- chamois slider ends -->
+<section id="page_header">
+   <div class="container left_align_head clearfix">
+      <div class="head_right_part">
+         <h2>Moisture Wicking </h2>
+      </div> 
+   </div>
+</section>
+
 <!-- Main content area -->
-<div class="container contents clearfix">
+<div class="container contents fabric_container clearfix">
 	 
-	<div class="mobile-heding-div">
-		<h2>Moisture Wicking </h2>
-	</div> 
+	
 	<!-- main sidebar -->
 	<aside class="mainSidebar">
 		<div class="asideContainer">	
@@ -251,7 +258,7 @@
 	<!-- main sidebar ends -->
 	<!-- content Section -->
 	<section class="productContent">
-		<h2>Moisture Wicking </h2>
+		
 		<!-- product row holder -->
 		<div class="productRowHolder">
 			<div class="productRow">
@@ -431,7 +438,137 @@
 	<!-- end content section -->
 </div>
 
-
+<!-- Footer Start -->
+<footer>
+  <div class="footer_back">
+    <div class="footer_wrap">
+      <h5>Quality Custom Sportswear made Easy</h5>
+      <div class="footer_border clearfix">
+        <div class="container clearfix">
+          <div class="footer_left_row clearfix">
+            <div class="footer_row">
+              <h3>About US</h3>
+              <ul>
+                <li><a href="#">Who We Are</a></li>
+                <li><a href="#">Our Customer</a></li>
+              </ul>
+            </div>
+            <div class="footer_row contact_sec">
+              <h3>Contact US</h3>
+              <ul>
+                <li class="email"><img src="images/footer_email.png"/><a href="#">Email Us</a></li>
+                <li class="tel"><img src="images/footer_call.png"/><a href="tel:1-800-894-7105">1-800-894-7105</a></li>
+                <li><span>Business Hours :</span> M-F 9AM - 6PM EST</li>
+              </ul>
+            </div>
+            <div class="footer_row business_hour">
+              <ul>
+                <li class="footer_owned"><a href="#"><img src="images/footer_usa.png"/></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer_center_row">
+            <div class="footer_row">
+              <h3>Products</h3>
+              <ul>
+                <li><a href="#">Cycling</a></li>
+                <li><a href="#">Triathlon</a></li>
+                <li><a href="#">Running</a></li>
+                <li><a href="#">Casual</a></li>
+              </ul>
+            </div>
+            <div class="footer_row">
+              <h3>Ordering</h3>
+              <ul>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Order Minimums</a></li>
+                <li><a href="#">Turnaround</a></li>
+                <li><a href="#">Team Stories</a></li>
+                <li><a href="#">Order Policies</a></li>
+              </ul>
+            </div>
+            <div class="footer_row">
+              <h3>Helpful Resources</h3>
+              <ul>
+                <li><a href="#">Sizing Charts</a></li>
+                <li><a href="#">Faq’s</a></li>
+                <li><a href="#">Artwork Templates</a></li>
+              </ul>
+            </div>
+            <div class="footer_row">
+              <h3>Technology</h3>
+              <ul>
+                <li><a href="#">Materials</a></li>
+                <li><a href="#">Production</a></li>
+              </ul>
+            </div>
+            <div class="footer_row">
+              <h3>Design</h3>
+              <ul>
+                <li><a href="#">How It Works!</a></li>
+                <li><a href="#">Example Designs</a></li>
+                <li><a href="#">Artwork Templates</a></li>
+              </ul>
+            </div>
+            <div class="footer_row">
+              <h3>Special Programs</h3>
+              <ul>
+                <li><a href="#">Clubs & Teams</a></li>
+                <li><a href="#">Charity Teams</a></li>
+                <li><a href="#">Events & Non Profits</a></li>
+                <li><a href="#">Bike Shops / Retailers</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer_right_row">
+            <div class="footer_row">
+              <h3>Latest Post</h3>
+              <ul>
+                <li><a href="#">
+                  <div class="imagehold"> <img src="images/footer_post1.jpg"/> </div>
+                  <div class="footer_posthold">
+                    <h5>Cycling Jerseys a success for Congo!</h5>
+                    <p>On August 9, 2011</p>
+                  </div>
+                  </a></li>
+                <li><a href="#">
+                  <div class="imagehold"> <img src="images/footer_post2.jpg"/> </div>
+                  <div class="footer_posthold">
+                    <h5>Page when looking at its layout</h5>
+                    <p>On July 1, 2015</p>
+                  </div>
+                  </a></li>
+                <li><a href="#">
+                  <div class="imagehold"> <img src="images/footer_post3.jpg"/> </div>
+                  <div class="footer_posthold">
+                    <h5>Simply dummy text of the printing</h5>
+                    <p>On July 1, 2015</p>
+                  </div>
+                  </a></li>
+                <li><a href="#">
+                  <div class="imagehold"> <img src="images/footer_post4.jpg"/> </div>
+                  <div class="footer_posthold">
+                    <h5>Page when looking at its layout</h5>
+                    <p>On July 1, 2015</p>
+                  </div>
+                  </a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer_copyright">
+      <p>Copyright &copy; 2016 Ascend Sportswear</p>
+      <ul class="footer_social">
+        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i> </a></li>
+        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a></li>
+        <li><a href="#"><img src="images/instagram_footer.png"/> </a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+<!-- Footer End --> 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src="js/custom.js"></script>
 </body>
